# Laser_demo_optimize

./: CMakeLists.txt  README.md  build.bat
dep/: comm_data.h  serial.h  win_serial.cpp  win_serial.h
src/: CmakeLists.txt  laser_lidar_g4.cpp  lidar_delat_2a.cpp  main.cpp
src/base/: laser_lidar_g4.h  lidar_delat_2a.h
