project(LASER_OPTIMIZE)
cmake_minimum_required (VERSION 2.8)
INCLUDE_DIRECTORIES(dep)

SET(CMAKE_CONFIGURATION_TYPES Release CACHE STRING "" FORCE)
SET(EXECUTABLE_OUTPUT_PATH ${LASER_OPTIMIZE_SOURCE_DIR}/bin/lib CACHE PATH "Build directory" FORCE)
SET(LIBRARY_OUTPUT_PATH ${LASER_OPTIMIZE_SOURCE_DIR}/bin/lib CACHE PATH "Build directory" FORCE)
add_subdirectory(src)
#add_subdirectory(dep)